# aws-durable-execution-conformance-tests

./: .gitignore  .yamllint.yaml  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_requirement.yml  requirement_dispute.yml
.github/prompts/: ai-pr-review.md
.github/workflows/: ai-pr-review.yml  ci.yml  e2e.yml  java-opentelemetry.yml  java-otel-integration.yml  java-s3-collector.yml  notify-issues.yml  notify-pr.yml  otel-integration.yml  pypi-publish.yml  python-opentelemetry.yml  python-s3-collector.yml  typescript-opentelemetry.yml  typescript-s3-collector.yml
e2e-fixtures/: package-lock.json  package.json  template.yaml  tsconfig.json
e2e-fixtures/handlers/: step_basic.ts  wait_basic.ts  wait_duration_units.ts
scripts/: build_distributions.py  check_distributions.py  prepare_ai_review_context.sh  prepare_ai_review_user.sh  run_claude_isolated.sh  smoke_wheels.py
src/aws_durable_execution_conformance_tests/: app.py  callback.py  cloudwatch.py  config.py  sam.py  validate.py
src/aws_durable_execution_sdk_testing/: __about__.py  app.py  cloudwatch.py  config.py  history.py  reporters.py  sam.py  validate.py
test-requirements/callback/: 4-1.yaml  4-12.yaml  4-14.yaml  4-17.yaml  4-18.yaml  4-3.yaml  4-5.yaml  4-6.yaml  4-9.yaml
test-requirements/child/: 3-11.yaml  3-13.yaml  3-14.yaml  3-17.yaml  3-18.yaml  3-2.yaml  3-3.yaml  3-4.yaml  3-5.yaml  3-7.yaml  3-8.yaml
test-requirements/invoke/: 5-11.yaml  5-12.yaml  5-13.yaml  5-14.yaml  5-6.yaml  5-9.yaml
test-requirements/map/: 9-10.yaml  9-17.yaml  9-19.yaml  9-2.yaml  9-6.yaml  9-8.yaml  9-9.yaml
test-requirements/parallel/: 8-10.yaml  8-12.yaml  8-14.yaml  8-2.yaml  8-21.yaml  8-22.yaml  8-5.yaml
test-requirements/step/: 1-1.yaml  1-10.yaml  1-11.yaml  1-13.yaml  1-14.yaml  1-2.yaml  1-5.yaml  1-7.yaml  1-9.yaml
test-requirements/wait/: 2-1.yaml  2-2.yaml  2-3.yaml  2-5.yaml
test-requirements/wait_for_callback/: 7-1.yaml  7-2.yaml  7-6.yaml  7-8.yaml  7-9.yaml
test-requirements/wait_for_condition/: 6-1.yaml  6-13.yaml  6-2.yaml  6-3.yaml  6-4.yaml  6-6.yaml  6-7.yaml  6-9.yaml
tests/: test_app.py  test_config.py  test_report.py  test_reporters.py  test_validate.py
