[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-durable-execution-sdk-testing"
dynamic = ["version"]
description = 'AWS Durable Execution SDK Testing framework'
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
keywords = []
authors = [{ name = "AWS durable-execution-dev", email = "durable-execution-dev@amazon.com" }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "boto3>=1.42.1",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/aws/aws-durable-execution-conformance-tests"
Repository = "https://github.com/aws/aws-durable-execution-conformance-tests"
Issues = "https://github.com/aws/aws-durable-execution-conformance-tests/issues"

[tool.hatch.build.targets.sdist]
packages = ["src/aws_durable_execution_sdk_testing"]

[tool.hatch.build.targets.sdist.force-include]
"LICENSE" = "LICENSE"
"NOTICE" = "NOTICE"
"test-requirements" = "test-requirements"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_durable_execution_sdk_testing"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "aws_durable_execution_sdk_testing/LICENSE"
"NOTICE" = "aws_durable_execution_sdk_testing/NOTICE"
"test-requirements" = "aws_durable_execution_sdk_testing/test_requirements"

[tool.hatch.version]
path = "src/aws_durable_execution_sdk_testing/__about__.py"

[tool.hatch.envs.default.scripts]
validate = "python -m aws_durable_execution_sdk_testing.app {args}"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aws_durable_execution_sdk_testing tests}"

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov=aws_durable_execution_sdk_testing --cov-report=term-missing {args:tests}"
cov-html = "pytest --cov=aws_durable_execution_sdk_testing --cov-report=html {args:tests}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
# Enable the type-checker inside functions that lack type annotations.
check_untyped_defs = true
# Show error codes to make silencing specific errors easier.
show_error_codes = true
# Show source snippets and location markers in error messages.
pretty = true
# Suppress errors for third-party packages that do not ship type hints
# (e.g. boto3/botocore). See
# https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports
ignore_missing_imports = true

[tool.hatch.envs.yaml]
extra-dependencies = [
  "yamllint>=1.35.0",
  "yamlfix>=1.16.0",
]
[tool.hatch.envs.yaml.scripts]
lint = "yamllint {args:test-requirements/}"
fix = "yamlfix {args:test-requirements/}"
fmt = ["fix", "lint"]

[tool.coverage.run]
source_pkgs = ["aws_durable_execution_sdk_testing", "tests"]
branch = true
parallel = true
omit = [
  "src/aws_durable_execution_sdk_testing/__about__.py",
]

[tool.coverage.paths]
aws_durable_execution_sdk_testing = ["src/aws_durable_execution_sdk_testing", "*/aws-durable-execution-sdk-testing/src/aws_durable_execution_sdk_testing"]
tests = ["tests", "*/aws-durable-execution-sdk-testing/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
